--- a/src/app/features/category-list/category-list.component.html
+++ b/src/app/features/category-list/category-list.component.html
@@ -1,1 +1,58 @@
-<p>category-list works!</p>
+<mat-card>
+  <mat-card-title>Categories</mat-card-title>
+
+  <mat-form-field appearance="fill" class="full-width">
+    <mat-label>New Category</mat-label>
+    <input matInput [(ngModel)]="newCategoryName" />
+  </mat-form-field>
+
+  <button mat-raised-button color="primary" (click)="add()">Add</button>
+
+  <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z2">
+
+    <!-- ID Column -->
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>ID</th>
+      <td mat-cell *matCellDef="let c">{{ c.id }}</td>
+    </ng-container>
+
+    <!-- Name Column -->
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
+      <td mat-cell *matCellDef="let c">
+        <ng-container *ngIf="!editingCategory || editingCategory.id !== c.id">
+          {{ c.name }}
+        </ng-container>
+        <ng-container *ngIf="editingCategory && editingCategory.id === c.id">
+          <input [(ngModel)]="editingCategory.name" />
+        </ng-container>
+      </td>
+    </ng-container>
+
+    <!-- Actions Column -->
+    <ng-container matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef>Actions</th>
+      <td mat-cell *matCellDef="let c">
+        <ng-container *ngIf="!editingCategory || editingCategory.id !== c.id">
+          <button mat-icon-button color="primary" (click)="edit(c)">
+            <mat-icon>edit</mat-icon>
+          </button>
+          <button mat-icon-button color="warn" (click)="delete(c)">
+            <mat-icon>delete</mat-icon>
+          </button>
+        </ng-container>
+        <ng-container *ngIf="editingCategory && editingCategory.id === c.id">
+          <button mat-icon-button color="primary" (click)="saveEdit()">
+            <mat-icon>check</mat-icon>
+          </button>
+          <button mat-icon-button (click)="cancelEdit()">
+            <mat-icon>close</mat-icon>
+          </button>
+        </ng-container>
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+</mat-card>
